# threathound

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
tests/: test_ioc.py  test_sigma.py
threathound/: __init__.py  cli.py  ioc.py  sigma.py
