[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threathound"
version = "0.1.0"
description = "ThreatHound — Blue Team SOC Automation. Hunt threats on Windows, analyze logs, detect anomalies, extract IOCs, generate Sigma rules."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "GrooveXlabs", email = "security@groovexlabs.com" },
]
keywords = [
    "security", "blue-team", "soc", "threat-hunting", "sigma", "ioc",
    "windows", "event-log", "forensics", "grooveguard",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
threathound = "threathound.cli:main"

[project.urls]
Homepage = "https://github.com/GrooveXlabs/threathound"
Repository = "https://github.com/GrooveXlabs/threathound"
Issues = "https://github.com/GrooveXlabs/threathound/issues"

[tool.hatch.build.targets.wheel]
packages = ["threathound"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
